<resources>
    <string name="app_name">SEPTT</string>
    <string name="yes_btn_text">Yes</string>
    <string name="no_btn_text">No</string>
    <string name="restart_btn_text">Restart</string>
    <string name="questions_btn_text">Training Tool</string>
    <string name="picture_of_model_btn_text">Picture of Model</string>
    <string name="training_btn_text">Training Presentations</string>
    <string name="about_btn_text">About</string>
    <string name="state_1_btn_text">State\n1</string>
    <string name="state_2_btn_text">State\n2</string>
    <string name="state_3_btn_text">State\n3</string>
    <string name="state_4_btn_text">State\n4</string>
    <string name="state_5_btn_text">State\n5</string>
    <string name="state_6_btn_text">State\n6</string>
    <string name="state_7_btn_text">State\n7</string>
    <string name="final_state_btn_text">Final\nState</string>
    <string name="questions_shortcut_short_label">Training Tool</string>
    <string name="questions_shortcut_long_label">Training Tool</string>
    <string name="questions_shortcut_disabled_message">Questions are disabled</string>
    <string name="picture_of_model_shortcut_short_label">Pic of Model</string>
    <string name="picture_of_model_shortcut_long_label">Picture of Model</string>
    <string name="picture_of_model_shortcut_disabled_message">Picture of model is disabled</string>
    <string name="training_shortcut_short_label">Training Presentations</string>
    <string name="training_shortcut_long_label">Training Presentations</string>
    <string name="training_shortcut_disabled_message">Training is disabled</string>
    <string name="about_shortcut_short_label">About</string>
    <string name="about_shortcut_long_label">About</string>
    <string name="about_shortcut_disabled_message">About is disabled</string>
</resources>
